add wasm tools to PR check?

--- a/.github/workflows/eme-reusable-frontend-setup-checks.yml
+++ b/.github/workflows/eme-reusable-frontend-setup-checks.yml
@@ -51,7 +51,10 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
-
+      
+      - name: Install wasm-tools
+        run: dotnet workload install wasm-tools
+      
       - name: Restore for .NET dependencies required for client setup tests
         working-directory: ./
         run: |
