--- a/.github/workflows/eme-reusable-dotnet-unit-tests.yml
+++ b/.github/workflows/eme-reusable-dotnet-unit-tests.yml
@@ -40,6 +40,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+      
+      - name: Install wasm-tools
+        run: dotnet workload install wasm-tools
 
       - name: Restore and Build
         working-directory: ./
