multi-environment client asset builds

--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,4 @@ FodyWeavers.xsd
 /.history
 /Energy.App.Standalone/wwwroot/**/*
 Energy.App.Standalone/src/views/Credits.html
+Energy.App.Standalone/webAssets/**/*
