--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "build": "node src/build.js",
     "buildDev": "node src/build.js --development",
-    "buildDevDemo": "node src/build.js --development --demo",
+    "buildDevDemo": "node src/build.js --development --demoonly",
 
     "buildProd": "node src/build.js --production",
-    "buildProdDemo": "node src/build.js --production --demo",
-
+    "buildProdDemo": "node src/build.js --production --demoonly",
     "buildCreditsDoc": "node src/attributionAndLicensing/GenerateCreditsDoc.js",
     "test": "mocha -R mocha-junit-reporter --reporter-option mochaFile=testResults/clientDeploymentTestResults.xml --recursive --grep '.*' src/test"
   },
@@ -51,7 +50,7 @@
     "glob": "^10.3.4",
     "handlebars": "^4.7.8",
     "he": "^1.2.0",
-    "html-bundler-webpack-plugin": "^2.14.0",
+    "html-bundler-webpack-plugin": "^2.14.3",
     "isomorphic-dompurify": "^1.9.0",
     "license-checker-rseidelsohn": "^4.2.6",
     "marked": "^9.0.0",
