--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,6 @@ FodyWeavers.xsd
 /.history
 /Energy.App.Standalone/wwwroot/**/*
 Energy.App.Standalone/src/views/Credits.html
+Energy.App.Standalone/webAssets/**/*
+
+.env
