--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -7,22 +7,17 @@
 		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
-
 	<ItemGroup>
 		<PackageReference Include="Fluxor" Version="5.9.1" />
 		<PackageReference Include="Fluxor.Blazor.Web" Version="5.9.1" />
 		<PackageReference Include="Fluxor.Persist" Version="2.5.3" />
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.11" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.11" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.11" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.12" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.12" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.12" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="MinVer" Version="4.3.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="MudBlazor" Version="6.10.0" />
+		<PackageReference Include="MudBlazor" Version="6.11.0" />
 		<PackageReference Condition="'$(Configuration)'=='Debug'" Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.9.1" PrivateAssets="all" />
 	</ItemGroup>
 
@@ -32,22 +27,62 @@
 		<ProjectReference Include="..\Energy.Shared\Energy.Shared.csproj" />
 		<ProjectReference Include="..\Energy.WeatherReadings\Energy.WeatherReadings.csproj" />
 	</ItemGroup>
-
-
+	
+	
 	<Target Name="CollectMudBlazorStaticAssets" DependsOnTargets="ResolveStaticWebAssetsInputs" AfterTargets="Build" Condition=" '$(Configuration)' == 'Debug' ">
 		<Copy SourceFiles="%(StaticWebAsset.Identity)" DestinationFolder="wwwroot/temp" Condition="$([System.String]::Copy(%(StaticWebAsset.Identity)).Contains('mudblazor'))" />
 	</Target>
 	
 	<PropertyGroup>
-		<MinVerTagPrefix>v</MinVerTagPrefix>
-	</PropertyGroup>
-
-	<PropertyGroup>
 		<RunAOTCompilation>true</RunAOTCompilation>
 		<PublishTrimmed>false</PublishTrimmed>
 		<BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
 	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<ClientEnv>Development</ClientEnv>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+		<ClientEnv>Development</ClientEnv>
+	</PropertyGroup>
 
+
+	<Target Name="CopyCustomFiles" BeforeTargets="BeforeBuild">
+    	<Message Importance="high" Text="ClientEnv is $(ClientEnv)" />
+    	<Copy SourceFiles="@(CustomFiles)" DestinationFolder="$(ProjectDir)wwwroot\%(RecursiveDir)" />
+  </Target>
+
+
+	<ItemGroup Condition="'$(ClientEnv)' == 'Development'">
+		<CustomFiles Include="webAssets/webAssetsDevelopment/**/*.*" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(ClientEnv)' == 'Staging'">
+		<CustomFiles Include="webAssets/webAssetsStaging/**/*.*" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(ClientEnv)' == 'Production'">
+		<CustomFiles Include="webAssets/webAssetsProduction/**/*.*" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(ClientEnv)' == 'DemoDevelopment'">
+		<CustomFiles Include="webAssets/webAssetsDemoDevelopment/**/*.*" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(ClientEnv)' == 'DemoStaging'">
+		<CustomFiles Include="webAssets/webAssetsDemoStaging/**/*.*" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(ClientEnv)' == 'DemoProduction'">
+		<CustomFiles Include="webAssets/webAssetsDemoProduction/**/*.*" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Update="wwwroot\appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
 
 
 </Project>
