--- a/.gitignore
+++ b/.gitignore
@@ -421,5 +421,8 @@ FodyWeavers.xsd
 /Energy.App.Standalone/wwwroot/**/*
 Energy.App.Standalone/src/views/Credits.html
 Energy.App.Standalone/webAssets/**/*
-
+/**/appsettings.Development.json
 .env
+
+*.pem
+*.key
