--- a/.gitignore
+++ b/.gitignore
@@ -421,7 +421,7 @@ FodyWeavers.xsd
 /Energy.App.Standalone/wwwroot/**/*
 Energy.App.Standalone/src/views/Credits.html
 Energy.App.Standalone/webAssets/**/*
-/**/appsettings.Development.json
+Energy.App.Standalone/src/appsettings.Development.json
 .env
 
 *.pem
