--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -14,9 +14,9 @@ gem "just-the-docs", "0.6.2"
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 # gem "github-pages", "~> 228", group: :jekyll_plugins
 # If you have any plugins, put them here!
-group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.12"
-end
+# group :jekyll_plugins do
+#   gem "jekyll-feed", "~> 0.12"
+# end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
