Try build time decrease; fix no demo site docs

--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -36,6 +36,10 @@
 	</Target>
 	
 	<PropertyGroup>
+
+		<EmccLinkOptimizationFlag>-O1</EmccLinkOptimizationFlag>
+		<EmccCompileOptimizationFlag>-O1</EmccCompileOptimizationFlag>
+		
 		<RunAOTCompilation>true</RunAOTCompilation>
 		<PublishTrimmed>false</PublishTrimmed>
 		<BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
