Demo display enhance; faster demo update; code improvements

--- a/Energy.App.Standalone/Energy.App.Standalone.csproj
+++ b/Energy.App.Standalone/Energy.App.Standalone.csproj
@@ -36,21 +36,17 @@
 	</Target>
 	
 	<PropertyGroup>
-
-		<EmccLinkOptimizationFlag>-O1</EmccLinkOptimizationFlag>
-		<EmccCompileOptimizationFlag>-O1</EmccCompileOptimizationFlag>
-		
 		<RunAOTCompilation>true</RunAOTCompilation>
 		<PublishTrimmed>false</PublishTrimmed>
 		<BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<ClientEnv>DemoDevelopment</ClientEnv>
+		<ClientEnv>Development</ClientEnv>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-		<ClientEnv>DemoDevelopment</ClientEnv>
+		<ClientEnv>Development</ClientEnv>
 	</PropertyGroup>
 
 
