--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,9 +14,19 @@ name: "CodeQL"
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - README.md
+      - docs/**
+      - .gitub/**
+      - .editor.config
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
+    paths-ignore:
+      - README.md
+      - docs/**
+      - .gitub/**
+      - .editor.config
   schedule:
     - cron: '40 16 * * 6'
 
