--- a/Energy.App.Standalone/package.json
+++ b/Energy.App.Standalone/package.json
@@ -44,6 +44,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "eslint": "^8.50.0",
     "glob": "^10.3.4",
