App lock/unlocking - unlocking incomplete, see TODO in unlock component

--- a/Energy.App.Standalone/tsconfig.json
+++ b/Energy.App.Standalone/tsconfig.json
@@ -11,7 +11,7 @@
     "checkJs": false,
     "outDir": "./"
   },
-  "files": [ "src/ts/index.ts", "src/ts/Files/chartCreation.ts", "src/ts/Files/types.ts", "src/ts/Files/energyOnlyChart.ts", "src/ts/Files/weatherIconChart.ts" ],
+  "files": [ "src/ts/index.ts", "src/ts/Files/chartCreation.ts", "src/ts/Files/types.ts", "src/ts/Files/energyOnlyChart.ts", "src/ts/Files/weatherIconChart.ts", "src/ts/Files/localStorage.ts", "src/ts/Files/storageHelper.ts" ],
   
   "exclude": [
     "wwwroot/**",
