--- a/Energy.App.Standalone/src/data/appsettings.Development.json
+++ b/Energy.App.Standalone/src/data/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "App": {
     "UseDemoSetup": false,
-    "DocsUri": "https://docs.explainmyenergy.net/"
+    "DocsUri": "http://localhost:4000/"
   }
 }
