--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: Explain My Energy Docs
 description: >- # this means to ignore newlines until "baseurl:"
   The documentation for the Explain My Energy web application.
   Explain My Energy is a free application that allows users to gain insight into their energy usage and 
-  forecast future energy costs, regardless of the utility provider and without needing to use paid applications or services.  
+  forecast future energy costs, regardless of the utility provider and without needing to use paid applications or services.
 url: "https://docs.explainmyenergy.net" # the base hostname & protocol for your site, e.g. http://example.com
 
 
@@ -57,6 +57,10 @@ nav_external_links:
     url: "https://github.com/zola-25/Explain-My-Energy"
     open_in_new_tab: true
 
+# webrick:
+#   headers:
+#     Access-Control-Allow-Origin: "*"
+#     Access-Control-Allow-Headers: "Origin, X-Requested-With, Content-Type, Accept"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
