wasm-tools-net7
Signed-off-by: Mike <29863888+zola-25@users.noreply.github.com>

--- a/.github/workflows/eme-reusable-dotnet-unit-tests.yml
+++ b/.github/workflows/eme-reusable-dotnet-unit-tests.yml
@@ -42,7 +42,7 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
       
       - name: Install wasm-tools
-        run: dotnet workload install wasm-tools
+        run: dotnet workload install wasm-tools-net7
 
       - name: Restore and Build
         working-directory: ./
