wasm-tools-net7
Signed-off-by: Mike <29863888+zola-25@users.noreply.github.com>

--- a/.github/workflows/eme-reusable-frontend-setup-checks.yml
+++ b/.github/workflows/eme-reusable-frontend-setup-checks.yml
@@ -53,7 +53,7 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
       
       - name: Install wasm-tools
-        run: dotnet workload install wasm-tools
+        run: dotnet workload install wasm-tools-net7
       
       - name: Restore for .NET dependencies required for client setup tests
         working-directory: ./
