--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -95,7 +95,7 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
       - name: Install wasm-tools
-        run: dotnet workload install wasm-tools
+        run: dotnet workload install wasm-tools-net7
         
       - name: SetupNode
         uses: actions/setup-node@v4
