--- a/.github/workflows/eme-reusable-frontend-setup-checks.yml
+++ b/.github/workflows/eme-reusable-frontend-setup-checks.yml
@@ -17,12 +17,12 @@ on:
         description: 'The .NET SDK version to use'
         required: true
         type: string
-        default: '7.0.400'
+        default: '8.0.100' 
       NodeVersion:
         description: 'The node version to use'
         required: true
         type: string
-        default: '18.x'
+        default: '20.x'
       
 
 env:
@@ -53,7 +53,7 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
       
       - name: Install wasm-tools
-        run: dotnet workload install wasm-tools-net7
+        run: dotnet workload install wasm-tools
       
       - name: Restore for .NET dependencies required for client setup tests
         working-directory: ./
